--- a/index.html
+++ b/index.html
@@ -1,7 +1,116 @@
 <HTML>
    <head>
      <body>
-       afidatun azizah
+       <!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page TJKT</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f4f6f8;
+            color: #333;
+        }
+        header {
+            background: linear-gradient(135deg, #1e90ff, #005cbf);
+            color: white;
+            padding: 40px 20px;
+            text-align: center;
+        }
+        header h1 {
+            margin-bottom: 10px;
+        }
+        section {
+            padding: 40px 20px;
+            max-width: 1000px;
+            margin: auto;
+        }
+        .card {
+            background: white;
+            padding: 25px;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .skills ul {
+            list-style: none;
+            padding: 0;
+        }
+        .skills li {
+            background: #e3f2fd;
+            margin: 8px 0;
+            padding: 10px;
+            border-radius: 6px;
+        }
+        footer {
+            background-color: #222;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            font-size: 14px;
+        }
+        .btn {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 12px 20px;
+            background-color: #1e90ff;
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+        }
+        .btn:hover {
+            background-color: #005cbf;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Halo, Saya Murid TJKT</h1>
+        <p>SMK 1 Barunawati</p>
+        <a href="#tentang" class="btn">Kenali Saya</a>
+    </header>
+
+    <section id="tentang">
+        <div class="card">
+            <h2>Tentang Saya</h2>
+            <p>
+                Saya adalah seorang murid di <strong>SMK 1 Barunawati</strong> 
+                dengan jurusan <strong>Teknik Jaringan Komputer dan Telekomunikasi (TJKT)</strong>.
+                Saya tertarik pada dunia jaringan komputer, teknologi, dan komunikasi digital.
+            </p>
+        </div>
+
+        <div class="card skills">
+            <h2>Keahlian yang Dipelajari</h2>
+            <ul>
+                <li>Dasar Jaringan Komputer</li>
+                <li>Instalasi dan Konfigurasi Jaringan</li>
+                <li>Perakitan Komputer</li>
+                <li>IP Address & Subnetting</li>
+                <li>Dasar Telekomunikasi</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>Tujuan</h2>
+            <p>
+                Tujuan saya adalah menjadi lulusan TJKT yang kompeten,
+                siap kerja, dan mampu mengikuti perkembangan teknologi jaringan
+                di dunia industri.
+            </p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2026 | Landing Page Murid TJKT - SMK 1 Barunawati</p>
+    </footer>
+
+</body>
+</html>
      </body>
    </head>
 </HTML>
